added actionbar, changed minSDK to 11

--- a/Secrets/res/values/strings.xml
+++ b/Secrets/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="password">Enter password:</string>
     <string name="passwordAlertDialog">Authentication</string>
-
-
+    <string name="action_add">Add Secret</string>
+    <string name="action_edit">Edit Secret</string>
+    <string name="action_delete">Delete Secret(s)</string>
+    <string name="title_activity_save_edit">SaveEditActivity</string>
 
 </resources>
