added saveButton implementation

--- a/Secrets/res/values/strings.xml
+++ b/Secrets/res/values/strings.xml
@@ -10,5 +10,10 @@
     <string name="action_edit">Edit Secret</string>
     <string name="action_delete">Delete Secret(s)</string>
     <string name="title_activity_save_edit">SaveEditActivity</string>
+    <string name="secret">Enter secret:</string>
+    <string name="saveEditDialog">Enter your secret:</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="edit">Edit</string>
 
 </resources>
